--- a/API.rmd
+++ b/API.rmd
@@ -52,7 +52,17 @@ js <- read_json(url)
 
 
 ```{r}
+num_petitions <- length(js$data)
 
+id <- map(1:num_petitions, ~ js$data[[.x]]$id) %>% unlist()
+id <- map(1:num_petitions, ~ pluck(js, 'data', .x, 'id')) %>% unlist()
+
+
+js$data[[1]]$attributes$signature_count
+signature_count <- map(1:num_petitions, ~ pluck(js, 'data', .x, 'attributes', 'signature_count')) %>% unlist()
+
+
+created_at <- map(1:num_petitions, ~ pluck(js, 'data', .x, 'attributes', 'created_at')) %>% unlist()
 ```
 
 ## `unnest`
@@ -61,7 +71,11 @@ js <- read_json(url)
 - `unnest()` will help you a lot
 
 ```{r}
-
+df_pet <- js$data %>% tibble %>%
+  unnest_wider(".") %>%
+  unnest_wider("links") %>%
+  unnest_wider("attributes") %>%
+  select_if(Negate(is_list))
 ```
 
 - This method works with similarly structured XML
@@ -82,7 +96,7 @@ xml <- read_xml(url) %>%
 - this is actually so easy
 
 ```{r}
-
+fromJSON(url)
 ```
 
 
@@ -98,5 +112,30 @@ url <- sprintf(url_template, '614869')
 
 
 ```{r}
+js <- fromJSON(url)
+#js$data$attributes$signatures_by_constituency
+
+df_signatures_by_constituency <- js$data$attributes$signatures_by_constituency
+
 
 ```
+
+```{r}
+fetch_petition <- function(petition_id, sl_sec = 3) {
+  print(paste(as.character(Sys.time()), petition_id))
+  url_template <- 'https://petition.parliament.uk/petitions/%s.json'
+  url <- sprintf(url_template, petition_id)
+  js <- fromJSON(url)
+  df_signatures_by_constituency <- js$data$attributes$signatures_by_constituency %>% 
+    mutate(id = petition_id) 
+  Sys.sleep(sl_sec)
+  return(df_signatures_by_constituency)
+}
+
+df_all_petitions <- df_pet$id[1:3] %>% 
+  map_dfr(fetch_petition)
+
+df_all_petitions %>% 
+  pivot_wider(values_from = signature_count, names_from = id)
+```
+
